Fix Application plugin distribution problems